@@ -65,6 +65,10 @@ public:
 #endif
 
   /** Dimension accessor */
+  UnsignedInteger getInputDimension() const;
+  UnsignedInteger getOutputDimension() const;
+
+  /** @deprecated */
   UnsignedInteger getSpatialDimension() const;
   UnsignedInteger getDimension() const;
 
